# start/routes.ts
@@ -10,7 +10,7 @@ Route.group(() => {
     Route.put('/:id', 'UsersController.update')
     Route.delete('/:id', 'UsersController.destroy')
   }).prefix('users')
-  Route.get('/team-member/list', 'TeamMembersController.list')
+  //Route.get('/team-member/', 'TeamMembersController.list')
   Route.resource('team-member', 'TeamMembersController')
     .apiOnly()
     .where('id', Route.matchers.uuid())
